tests/type-errors/move-semantics/unpack_missing_nodrop_field.cx
struct Resource : @nodrop {
    int data;
};

struct Container : @nodrop {
    Resource resource;
    int count;
};

void Container::drop(this) {
    @unpack(this) {
        count: count,
    };
}
